--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "gameoflife",
   "scripts": {
-    "test": "",
+    "test": "jest",
     "lint": "prettier --check . && eslint .",
     "lint:fix": "prettier --write . && eslint . --fix",
     "prepare": "husky install",
@@ -25,7 +25,7 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^27.5.2",
     "@types/jquery": "^3.5.14",
     "assert": "^2.0.0",
     "babel-jest": "^28.1.0",
@@ -41,7 +41,7 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.0",
+    "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.1",
     "jest-localstorage-mock": "^2.4.21",
     "jquery": "^3.6.0",
@@ -58,6 +58,7 @@
     "string_decoder": "^1.3.0",
     "style-loader": "^3.3.1",
     "tls": "^0.0.1",
+    "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "url": "^0.11.0",
